[package]
name = "sodium-rust"
version = "2.0.0"
authors = ["Clinton Selke <clinuxrulz@gmail.com>"]
edition = "2018"
license = "BSD-3-Clause"
repository = "https://github.com/SodiumFRP/sodium-rust"
keywords = ["frp"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"

[dev-dependencies]
env_logger = "0.7.1"