[package]
name = "sodium-rust"
version = "2.1.2"
authors = ["Clinton Selke <clinuxrulz@gmail.com>"]
edition = "2021"
license = "BSD-3-Clause"
repository = "https://github.com/SodiumFRP/sodium-rust"
keywords = ["frp"]
description = "Sodium FRP (Functional Reactive Programming)"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"

[dev-dependencies]
criterion = "0.3.3"
env_logger = "0.9.0"

[profile.release]
debug = 1

[[bench]]
name = "sodium"
harness = false
